--- a/map_liu.html
+++ b/map_liu.html
@@ -50,7 +50,7 @@ function d3layer() {
         feature.attr('cx', function(d){ return coords(d)[0];});
         feature.attr('r', function(d){ return 4; });
         feature.attr("class", function(d) {return d.category2.substring(0,3);});
-        feature.style("opacity", 0);
+        feature.style("opacity", 1);
         feature.style("stroke-width",2);
     };
 
@@ -87,19 +87,19 @@ function d3layer() {
             new MM.Location(bounds[1][1], bounds[1][0]));
     };
    
-        setTimeout(showDots, 1000);
+//         setTimeout(showDots, 1000);
 	
 	function parseTime(t){
 		var hour = parseInt(t.substring(11,13)),
 			minu = parseInt(t.substring(14,16)),
 			secd = parseInt(t.substring(17,19));
-			return hour * 3600 + minu * 60 + secd;
+			return hour * 3600 + minu * 6 + secd;
 	}
 	
 	function showDots(){
 		var t = svg.selectAll("circle")
 			.transition()
-			.delay(function(d){return parseTime(d.created_time)*0.1;})
+			.delay(function(d){return parseTime(d.created_time)*20;})
 			.duration(2000)
 			.attr('r', 7)
 			.style("opacity", 1);
