--- a/map_liu.html
+++ b/map_liu.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,6 +13,14 @@
 </head>
 <body>
 	<div id='map'></div>
+	<div id="bottom">
+		<div id="timeslider">
+			<div id="slider"></div>
+		</div>
+		<div id="time">00:00:00
+	
+		</div>
+	</div>
 
 	<!--<script src="/mapbox.js/assets/d3.v2.min.js"></script>-->
 
@@ -50,7 +59,7 @@ function d3layer() {
         feature.attr('cx', function(d){ return coords(d)[0];});
         feature.attr('r', function(d){ return 4; });
         feature.attr("class", function(d) {return d.category2.substring(0,3);});
-        feature.style("opacity", 0);
+        feature.style("opacity", 0.5);
         feature.style("stroke-width",2);
     };
 
@@ -87,29 +96,30 @@ function d3layer() {
             new MM.Location(bounds[1][1], bounds[1][0]));
     };
    
-        setTimeout(showDots, 1000);
+    setTimeout(showDots, 1000);
 	
 	function parseTime(t){
 		var hour = parseInt(t.substring(11,13)),
 			minu = parseInt(t.substring(14,16)),
 			secd = parseInt(t.substring(17,19));
-			return hour * 3600 + minu * 6 + secd;
+			return hour * 3600 + minu * 60 + secd;
+			console.log(hour * 3600 + minu * 60 + secd);
 	}
 	
 	function showDots(){
 		var t = svg.selectAll("circle")
 			.transition()
-			.delay(function(d){return parseTime(d.created_time)*0.1;})
+			.delay(function(d){return parseTime(d.created_time)/3;})
 			.duration(2000)
-			.attr('r', 7)
+			.attr('r', 12)
 			.style("opacity", 1);
 		
-		//var t1 = svg.selectAll("circle")
-			//.transition()
-			//.delay(function(d){return parseTime(d.created_time)*10 +3000;})
-			//.duration(2000)
-			//.attr('r', 3)
-			//.style("opacity", 0.2);		
+		var t1 = svg.selectAll("circle")
+			.transition()
+			.delay(function(d){return parseTime(d.created_time)/3 +2000;})
+			.duration(2000)
+			.attr('r', 7)
+			.style("opacity", 0.5);		
 	}
 
     return f;
@@ -125,7 +135,7 @@ $(window).ready(function(){
 	    l = d3layer().data(data);
 	    map.addLayer(l);
 	    //map.extent(l.extent());
-	  });
+	  });      
 	});
 });	// end window ready function
 	
