--- a/map_liu.html
+++ b/map_liu.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset=utf-8 />
 <title>ShenZhen</title>
-	<script src="http://d3js.org/d3.v2.min.js?2.8.1"></script>
+	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 	<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>  
   	<script src='http://api.tiles.mapbox.com/mapbox.js/v0.6.7/mapbox.js'></script>
@@ -57,7 +57,7 @@ function d3layer() {
             return f.project(d.lat_event, d.lng_event);};
         feature.attr('cy', function(d){ return coords(d)[1];});
         feature.attr('cx', function(d){ return coords(d)[0];});
-        feature.attr('r', function(d){ return 4; });
+        feature.attr('r', function(d){ return 4});//change the size
         feature.attr("class", function(d) {return d.category2.substring(0,3);});
         feature.style("opacity", 0.5);
         feature.style("stroke-width",2);
@@ -121,7 +121,6 @@ function d3layer() {
 			.attr('r', 7)
 			.style("opacity", 0.5);		
 	}
-
     return f;
     
 }
@@ -130,7 +129,6 @@ function d3layer() {
 $(window).ready(function(){
 	mapbox.auto('map', 'heshan0131.gb2go124', function(map) {
 	  d3.csv("data/Aug_30_2013.csv", function(data){
-
 	  	 	
 	    l = d3layer().data(data);
 	    map.addLayer(l);
@@ -138,6 +136,7 @@ $(window).ready(function(){
 	  });      
 	});
 });	// end window ready function
+//dummy_data_1_user_41checksin.csv
 	
 </script>
 </body>
